--- a/build.gradle
+++ b/build.gradle
@@ -5,5 +5,11 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile 'org.jooq:joox:1.3.0',
+            'commons-io:commons-io:2.4',
+            'junit:junit:4.+'
+    compile 'org.hibernate:hibernate-core:4.3.10.Final',
+            'org.hibernate:hibernate-validator:4.3.1.Final',
+            'com.h2database:h2:1.4.188'
+
 }
